Removed slf4j use, update deps